--- a/mydrtv/src/app/player/player.component.html
+++ b/mydrtv/src/app/player/player.component.html
@@ -1,4 +1,5 @@
-<vg-player style="height: 100vh;">
+
+<vg-player class="full-player">
   <vg-overlay-play></vg-overlay-play>
   <vg-buffering></vg-buffering>
 
