--- a/mydrtv/src/styles.css
+++ b/mydrtv/src/styles.css
@@ -1,5 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+/*
+Colors
+*/
 body {
-  margin: 0 !important; }
+  margin: 0 !important;
+  background-color: #263238 !important;
+  color: #CFBABA !important; }
 
 /*# sourceMappingURL=styles.css.map */
