--- a/mydrtv/src/app/player/player.component.html
+++ b/mydrtv/src/app/player/player.component.html
@@ -1,5 +1,5 @@
 
-<vg-player class="full-player">
+<vg-player *ngIf="film" class="full-player">
   <vg-overlay-play></vg-overlay-play>
   <vg-buffering></vg-buffering>
 
@@ -27,11 +27,15 @@
   </vg-controls>
 
   <video [vgMedia]="media" #media id="singleVideo" preload="auto" crossorigin>
-    <source src="http://static.videogular.com/assets/videos/videogular.mp4" type="video/mp4">
-    <source src="http://static.videogular.com/assets/videos/videogular.ogg" type="video/ogg">
-    <source src="http://static.videogular.com/assets/videos/videogular.webm" type="video/webm">
+    <source src="{{film.VideoSource}}" type="video/mp4">
 
     <track kind="subtitles" label="English" src="http://static.videogular.com/assets/subs/pale-blue-dot.vtt" srclang="en" default>
     <track kind="subtitles" label="Español" src="http://static.videogular.com/assets/subs/pale-blue-dot-es.vtt" srclang="es">
   </video>
 </vg-player>
+<h2>The film is: </h2>
+<h3>hello</h3>
+<div *ngIf="film">
+  <h2>You're watching {{film.Title}}</h2>
+  <h3>A film by {{film.Director}}</h3>
+</div>
