--- a/mydrtv/src/app/signup/signup.component.html
+++ b/mydrtv/src/app/signup/signup.component.html
@@ -1,3 +1,4 @@
+
 <form [formGroup]="signupForm" (ngSubmit)="onSubmit()"> 
     <label>
       <p>Name:</p>
@@ -18,6 +19,11 @@
         <p>Password:</p>
         <input type="password" formControlName="password">
     </label>
+
+    <label>
+      <p>Re-type password:</p>
+      <input type="retypePassword" formControlName="password">
+  </label>
 
     <label>
         <p>Gender:</p>
