--- a/mydrtv/src/app/signup/signup.component.html
+++ b/mydrtv/src/app/signup/signup.component.html
@@ -1,38 +1,60 @@
-
 <form [formGroup]="signupForm" (ngSubmit)="onSubmit()"> 
     <label>
-      <p>Name:</p>
-      <input type="text" formControlName="name">
+      <p>First Name:</p>
+      <input type="text" formControlName="name" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.name.errors }">
+        <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
+          <div *ngIf="f.name.errors.required">First Name is required</div>
+        </div>
     </label>
   
     <label>
       <p>Last Name:</p>
-      <input type="text" formControlName="lastName">
+      <input type="text" formControlName="lastName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }">
+        <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
+          <div *ngIf="f.lastName.errors.required">Last Name is required</div>
+        </div>
     </label>
 
     <label>
       <p>E-mail:</p>
-        <input type="text" formControlName="email">
+        <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }">
+        <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+          <div *ngIf="f.email.errors.required">E-mail is required</div>
+          <div *ngIf="f.email.errors.email">E-mail must be a valid e-mail address</div>
+      </div>
     </label>
 
     <label>
         <p>Password:</p>
-        <input type="password" formControlName="password">
+        <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }">
+          <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+            <div *ngIf="f.password.errors.required">Password is required</div>
+            <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
+         </div>
     </label>
 
     <label>
-      <p>Re-type password:</p>
-      <input type="retypePassword" formControlName="password">
+      <p>Confirm password:</p>
+      <input type="password" formControlName="retypePassword" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.retypePassword.errors }">
+        <div *ngIf="submitted && f.retypePassword.errors" class="invalid-feedback">
+          <div *ngIf="f.retypePassword.errors.required">Needs to match the password</div>
+        </div>
   </label>
 
     <label>
         <p>Gender:</p>
-        <select formControlName="gender">
+        <select formControlName="gender" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.gender.errors }">
           <option value="M">Male</option>
           <option value="F">Female</option>
+
+          <div *ngIf="submitted && f.gender.errors" class="invalid-feedback">
+            <div *ngIf="f.gender.errors.required">Gender is required</div>
+          </div>
         </select>
     </label>
 
-    <button type="submit" [disabled]="!signupForm.valid">Sign up</button>
+    <div class="form-group">
+      <button [disabled]="loading" class="btn btn-primary">Sign up</button>
+    </div>
   
   </form>
