--- a/mydrtv/src/app/navbar/navbar.component.html
+++ b/mydrtv/src/app/navbar/navbar.component.html
@@ -11,13 +11,13 @@
                                 *ngIf="authService.isLoggedIn">Profile</a></li>
         <li class="nav-item"><a class="nav-link" style="float:right" routerLink="login" routerLinkActive="active"
                                 *ngIf="!authService.isLoggedIn">Login</a></li>
-        <li class="nav-item"><a class="nav-link" (click)="logout()" href="#" *ngIf="authService.isLoggedIn">Logout</a>
+        <li class="nav-item" *ngIf="authService.isLoggedIn" ><a class="nav-link" (click)="logout()" href="#" >Logout</a>
         </li>
       </ul>
       <ul class="nav navbar-nav flex-row justify-content-between ml-auto">
         <li class="nav-item order-2 order-md-1"><a href="#" class="nav-link" title="settings"><i
           class="fa fa-cog fa-fw fa-lg"></i></a></li>
-        <li class="dropdown order-1">
+        <li class="dropdown order-1" *ngIf="!authService.isLoggedIn">
           <button type="button" id="dropdownMenu1" data-toggle="dropdown"
                   class="btn btn-outline-secondary dropdown-toggle">Login <span class="caret"></span></button>
           <ul class="dropdown-menu dropdown-menu-right mt-2">
