get-movies serice created, eror when displaying db info

--- a/mydrtv/src/app/movie-carousel/movie-carousel.component.html
+++ b/mydrtv/src/app/movie-carousel/movie-carousel.component.html
@@ -1,3 +1,40 @@
-<p>
-  movie-carousel works!
-</p>
+<div class="gallery-wrapper">
+<div class="gallery">
+  <a href="">
+    <img src="https://images.unsplash.com/photo-1525382455947-f319bc05fb35?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80" 
+    alt="Panda" width="600" height="400">
+  </a>
+</div>
+
+<div class="gallery">
+  <a href="">
+    <img src="https://images.unsplash.com/photo-1525382455947-f319bc05fb35?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80" 
+    alt="Panda" width="600" height="400">
+  </a>
+</div>
+
+<div class="gallery">
+  <a href="">
+    <img src="https://images.unsplash.com/photo-1525382455947-f319bc05fb35?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80"
+    alt="Panda" width="600" height="400">
+  </a>
+</div>
+
+<div class="gallery">
+  <a href="">
+    <img src="https://images.unsplash.com/photo-1525382455947-f319bc05fb35?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80" 
+    alt="Panda" width="600" height="400">
+  </a>
+</div>
+</div>
+
+<!--
+<ul class="films">
+  <li *ngFor="let f of films">
+    <a id="{{f._id}}">
+      <span ></span> {{f.Title}}
+    </a>
+    <button class="delete" title="delete film"
+      (click)="delete(f._id)">x</button>
+  </li>
+</ul>-->
