refactored get-movies service

--- a/mydrtv/src/app/movie-carousel/movie-carousel.component.html
+++ b/mydrtv/src/app/movie-carousel/movie-carousel.component.html
@@ -6,14 +6,11 @@
   </a>
 </div>
 </div>
-
 <!--
-<ul class="films">
-  <li *ngFor="let f of films">
-    <a id="{{f._id}}">
-      <span ></span> {{f.Title}}
-    </a>
-    <button class="delete" title="delete film"
-      (click)="delete(f._id)">x</button>
-  </li>
-</ul>-->
+<div class="container">
+  <div class="row">
+    <div *ngFor="let f of films" class="col-sm-2">
+      <a><img width="150" src="{{f.Poster}}"></a>
+    </div>
+  </div>
+</div> -->
