--- a/mydrtv/src/styles.scss
+++ b/mydrtv/src/styles.scss
@@ -5,8 +5,40 @@ Colors
 */
 $blueGray: #263238;
 $lightWhite: #CFBABA;
+
 body{
   margin: 0 !important;
   background-color: $blueGray !important;
   color: $lightWhite !important;
+}
+
+* {
+  font-size: 16px;
+  font-family: Arial;
+}
+
+form {
+  width: 500px;
+  padding-right: 20px;
+  padding-left: 35px;
+  padding-top: 10px;
+  padding-bottom: 50px;
+  border: 1px solid lightgray;
+  position: relative;
+  margin: 0 auto; 
+  margin-top: 50px;
+}
+
+p {
+  margin-block-start: 30px;
+  margin-block-end: 5px;
+}
+
+label {
+  margin-top: 10px;
+}
+
+.invalid-feedback {
+  color: red;
+  font-size: 6px; 
 }
