--- a/mydrtv/src/styles.scss
+++ b/mydrtv/src/styles.scss
@@ -4,7 +4,8 @@
 Colors
 */
 $blueGray: #263238;
-$lightWhite: #CFBABA;
+$lightWhite: #dedede;
+$main: #32b859;
 
 body{
   margin: 0 !important;
@@ -14,31 +15,53 @@ body{
 
 * {
   font-size: 16px;
-  font-family: Arial;
+  font-family: 'Montserrat'!important;
+}
+
+h2 {
+  text-align: center;
+  text-decoration: underline;
+  text-decoration-color: $main;
+
 }
 
 form {
   width: 500px;
-  padding-right: 20px;
-  padding-left: 35px;
-  padding-top: 10px;
-  padding-bottom: 50px;
-  border: 1px solid lightgray;
   position: relative;
   margin: 0 auto; 
   margin-top: 50px;
 }
 
-p {
-  margin-block-start: 30px;
-  margin-block-end: 5px;
-}
-
-label {
-  margin-top: 10px;
+input {
+  position: relative;
+  width: 100%;
+  background-color: transparent!important;
+  color: $lightWhite!important;
+  margin-top: 40px!important;
 }
 
 .invalid-feedback {
   color: red;
-  font-size: 6px; 
+  position: absolute;
+}
+
+.invalid-feedback div {
+  font-size: 12px;
+  float: right;
+}
+
+.btn-primary {
+  display: block;
+  width: 30%;
+  padding: 10px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  background-color: transparent!important;
+  border-color: $main!important;
+  color: $lightWhite!important;
+}
+
+.btn-primary:hover {
+  background-color: $main!important;
 }
