--- a/mydrtv/src/app/signup/signup.component.scss
+++ b/mydrtv/src/app/signup/signup.component.scss
@@ -1,4 +1,11 @@
 $lightWhite: #dedede;
+$main: #32b859;
+
+h2 {
+  text-align: center;
+  text-decoration: underline;
+  text-decoration-color: $main;
+}
 
 label {
     margin-top: 30px!important;
