split movie-carousel

--- a/mydrtv/src/app/movies-card/movies-card.component.html
+++ b/mydrtv/src/app/movies-card/movies-card.component.html
@@ -1,3 +1,4 @@
-<p>
-  movies-card works!
-</p>
+<a id="{{film._id}}" href="/film/{{film._id}}">
+  <img class="filmImg" src="{{film.Poster}}" 
+  alt="film-poster" width="inherit">
+</a>
