--- a/mydrtv/src/app/movie-carousel/movie-carousel.component.html
+++ b/mydrtv/src/app/movie-carousel/movie-carousel.component.html
@@ -1,9 +1,10 @@
-<div class="gallery-wrapper">
-<div *ngFor="let f of films" class="gallery">
-  <a id="{{f._id}}" href="/film/{{f._id}}">
-    <img src="{{f.Poster}}" 
-    alt="film-poster">
-  </a>
+<div *ngFor="let genre of genres" class="container">
+  <h3>{{genre}}</h3>
+<div class="row">
+  <div *ngFor="let film of films" class="col-2">
+      <app-movies-card [film]="film"></app-movies-card>
+  </div>
+
 </div>
 </div>
 <!--
