--- a/mydrtv/src/app/signup/signup.component.scss
+++ b/mydrtv/src/app/signup/signup.component.scss
@@ -1,3 +1,5 @@
+/* Colors */
+$blueGray: #263238;
 $lightWhite: #dedede;
 $main: #32b859;
 
@@ -8,7 +10,7 @@ h2 {
 }
 
 label {
-    margin-top: 30px!important;
+    margin-top: 38px!important;
 }
 
 select, option {
