--- a/mydrtv/src/app/signup/signup.component.html
+++ b/mydrtv/src/app/signup/signup.component.html
@@ -1,9 +1,9 @@
 <form [formGroup]="signupForm" (ngSubmit)="onSubmit()"> 
     <label>
-      <p>First Name:</p>
+      <p>Name:</p>
       <input type="text" formControlName="name" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.name.errors }">
         <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
-          <div *ngIf="f.name.errors.required">First Name is required</div>
+          <div *ngIf="f.name.errors.required">Name is required</div>
         </div>
     </label>
 
@@ -28,13 +28,22 @@
     <label>
         <p>Gender:</p>
         <select formControlName="gender" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.gender.errors }">
-          <option value="M" selected>Male</option>
+          <option value="">Choose...</option>
+          <option value="M">Male</option>
           <option value="F">Female</option>
-
-          <div *ngIf="submitted && f.gender.errors" class="invalid-feedback">
-            <div *ngIf="f.gender.errors.required">Gender is required</div>
-          </div>
         </select>
+
+        <div *ngIf="submitted && f.gender.errors" class="invalid-feedback">
+            <div *ngIf="f.password.errors.required">Gender is required</div>
+          </div>
+    </label>
+
+
+    <label>
+      <input type="checkbox" formControlName="checkbox" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.checkbox.errors }"> I agree to the Terms of Service and Privacy Policy.
+      <div *ngIf="submitted && f.checkbox.errors" class="invalid-feedback">
+          <div *ngIf="f.checkbox.errors.pattern">You cannot sign up if you do not agree.</div>
+        </div>
     </label>
 
     <div class="form-group">
