--- a/mydrtv/src/app/movie-carousel/movie-carousel.component.html
+++ b/mydrtv/src/app/movie-carousel/movie-carousel.component.html
@@ -1,8 +1,10 @@
-<div *ngFor="let genre of genres" class="container">
+<div *ngFor="let genre of genres; let y = index" class="container">
   <h3>{{genre}}</h3>
 <div class="row">
-  <div *ngFor="let film of films" class="col-2">
-      <app-movies-card [film]="film"></app-movies-card>
+  <div *ngFor="let film of films">
+    <div *ngIf="film.Genre.includes(genre)" class="col-2">
+        <app-movies-card [film]="film"></app-movies-card>
+    </div>
   </div>
 
 </div>
