--- a/mydrtv/src/app/navbar/navbar.component.html
+++ b/mydrtv/src/app/navbar/navbar.component.html
@@ -1,22 +1,28 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark" role="navigation">
+<nav class="navbar navbar-expand-lg navbar-dark" role="navigation">
   <div class="container">
-    <a class="navbar-brand" href="#">myDRTV</a>
+    <a class="navbar-brand" href="/home">MyDRTV</a>
     <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
       &#9776;
     </button>
     <div class="collapse navbar-collapse" id="exCollapsingNavbar">
       <ul class="nav navbar-nav">
-        <li class="nav-item"><a href="#" class="nav-link" routerLink="/">Home</a></li>
+        <li class="nav-item"><a href="#" class="nav-link" routerLink="/home"
+                                *ngIf="this.authService.isLoggedIn()">Home</a></li>
         <li class="nav-item"><a class="nav-link" routerLink="profile" routerLinkActive="active"
-                                *ngIf="this.authService.isLoggedIn()">Profile</a></li>
-        <li class="nav-item"><a class="nav-link" style="float:right" routerLink="login" routerLinkActive="active"
-                                *ngIf="!this.authService.isLoggedIn()">Login</a></li>
-        <li class="nav-item" *ngIf="this.authService.isLoggedIn()" ><a class="nav-link" (click)="logout()" href="#" >Logout</a>
+                                *ngIf="this.authService.isLoggedIn()">Films</a></li>
+        <li class="nav-item"><a class="nav-link" href="#"
+                                *ngIf="this.authService.isLoggedIn()">TV-Series</a>
         </li>
       </ul>
       <ul class="nav navbar-nav flex-row justify-content-between ml-auto">
         <li class="nav-item order-2 order-md-1"><a href="#" class="nav-link" title="settings"><i
           class="fa fa-cog fa-fw fa-lg"></i></a></li>
+
+          <li class="nav-item"><a class="nav-link" routerLink="profile" routerLinkActive="active"
+            *ngIf="this.authService.isLoggedIn()">Profile</a></li>
+<li class="nav-item"><a class="nav-link" (click)="logout()" href="#"
+            *ngIf="this.authService.isLoggedIn()">Logout</a>
+</li>
         <li class="dropdown order-1" *ngIf="!this.authService.isLoggedIn()">
           <button type="button" id="dropdownMenu1" data-toggle="dropdown"
                   class="btn btn-outline-secondary dropdown-toggle">Login <span class="caret"></span></button>
