--- a/mydrtv/src/app/navbar/navbar.component.html
+++ b/mydrtv/src/app/navbar/navbar.component.html
@@ -1,72 +1,66 @@
-<nav class="navbar navbar-expand-lg navbar-dark" role="navigation">
-  <div class="container">
-    <a class="navbar-brand" href="/home">MyDRTV</a>
-    <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
-      &#9776;
-    </button>
-    <div class="collapse navbar-collapse" id="exCollapsingNavbar">
-      <ul class="nav navbar-nav">
-        <li class="nav-item"><a href="#" class="nav-link" routerLink="/home"
-                                *ngIf="this.authService.isLoggedIn()">Home</a></li>
-        <li class="nav-item"><a class="nav-link" routerLink="profile" routerLinkActive="active"
-                                *ngIf="this.authService.isLoggedIn()">Films</a></li>
-        <li class="nav-item"><a class="nav-link" href="#"
-                                *ngIf="this.authService.isLoggedIn()">TV-Series</a>
-        </li>
-      </ul>
-      <ul class="nav navbar-nav flex-row justify-content-between ml-auto">
-        <li class="nav-item order-2 order-md-1"><a href="#" class="nav-link" title="settings"><i
-          class="fa fa-cog fa-fw fa-lg"></i></a></li>
-
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" role="navigation">
+    <div class="container">
+      <a class="navbar-brand" href="#">myDRTV</a>
+      <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+        &#9776;
+      </button>
+      <div class="collapse navbar-collapse" id="exCollapsingNavbar">
+        <ul class="nav navbar-nav">
+          <li class="nav-item"><a href="#" class="nav-link" routerLink="/">Home</a></li>
           <li class="nav-item"><a class="nav-link" routerLink="profile" routerLinkActive="active"
-            *ngIf="this.authService.isLoggedIn()">Profile</a></li>
-<li class="nav-item"><a class="nav-link" (click)="logout()" href="#"
-            *ngIf="this.authService.isLoggedIn()">Logout</a>
-</li>
-        <li class="dropdown order-1" *ngIf="!this.authService.isLoggedIn()">
-          <button type="button" id="dropdownMenu1" data-toggle="dropdown"
-                  class="btn btn-outline-secondary dropdown-toggle">Login <span class="caret"></span></button>
-          <ul class="dropdown-menu dropdown-menu-right mt-2">
-            <li class="px-3 py-2">
-              <div class="form-group">
-                <label for="email">Email</label>
-                <input id="email" type="email" placeholder="Email" [(ngModel)]="email"
-                       class="form-control form-control-sm" required="">
-              </div>
-              <div class="form-group">
-                <label for="password">Password</label>
-                <input id="password" type="password" placeholder="password" [(ngModel)]="password"
-                       class="form-control form-control-sm" required=""/>
-              </div>
-              <div class="form-group">
-                <button type="submit" class="btn btn-primary btn-block" (click)="Login()">Login</button>
-              </div>
-              <div class="form-group text-center">
-                <small><a href="#" data-toggle="modal" data-target="#modalPassword">Forgot password?</a></small>
-              </div>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-<div id="modalPassword" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-     aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h3>Forgot password</h3>
-        <button type="button" class="close font-weight-light" data-dismiss="modal" aria-hidden="true">×</button>
-      </div>
-      <div class="modal-body">
-        <p>Reset your password..</p>
-      </div>
-      <div class="modal-footer">
-        <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-        <button class="btn btn-primary">Save changes</button>
+                                  *ngIf="this.authService.isLoggedIn()">Profile</a></li>
+          <li class="nav-item"><a class="nav-link" style="float:right" routerLink="login" routerLinkActive="active"
+                                  *ngIf="!this.authService.isLoggedIn()">Login</a></li>
+          <li class="nav-item" *ngIf="this.authService.isLoggedIn()" ><a class="nav-link" (click)="logout()" href="#" >Logout</a>
+          </li>
+        </ul>
+        <ul class="nav navbar-nav flex-row justify-content-between ml-auto">
+          <li class="nav-item order-2 order-md-1"><a href="#" class="nav-link" title="settings"><i
+            class="fa fa-cog fa-fw fa-lg"></i></a></li>
+          <li class="dropdown order-1" *ngIf="!this.authService.isLoggedIn()">
+            <button type="button" id="dropdownMenu1" data-toggle="dropdown"
+                    class="btn btn-outline-secondary dropdown-toggle">Login <span class="caret"></span></button>
+            <ul class="dropdown-menu dropdown-menu-right mt-2">
+              <li class="px-3 py-2">
+                <div class="form-group">
+                  <label for="email">Email</label>
+                  <input id="email" type="email" placeholder="Email" [(ngModel)]="email"
+                         class="form-control form-control-sm" required="">
+                </div>
+                <div class="form-group">
+                  <label for="password">Password</label>
+                  <input id="password" type="password" placeholder="password" [(ngModel)]="password"
+                         class="form-control form-control-sm" required=""/>
+                </div>
+                <div class="form-group">
+                  <button type="submit" class="btn btn-primary btn-block" (click)="Login()">Login</button>
+                </div>
+                <div class="form-group text-center">
+                  <small><a href="#" data-toggle="modal" data-target="#modalPassword">Forgot password?</a></small>
+                </div>
+              </li>
+            </ul>
+          </li>
+        </ul>
       </div>
     </div>
+  </nav>
+  
+  <div id="modalPassword" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+       aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h3>Forgot password</h3>
+          <button type="button" class="close font-weight-light" data-dismiss="modal" aria-hidden="true">×</button>
+        </div>
+        <div class="modal-body">
+          <p>Reset your password..</p>
+        </div>
+        <div class="modal-footer">
+          <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+          <button class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
