--- a/mydrtv/src/app/navbar/navbar.component.html
+++ b/mydrtv/src/app/navbar/navbar.component.html
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" role="navigation">
   <div class="container">
-    <a class="navbar-brand" routerLink="/home">MyDRTV</a>
+    <a class="navbar-brand" routerLink="/">MyDRTV</a>
     <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">&#9776;</button>
     
     <div class="collapse navbar-collapse" id="exCollapsingNavbar">
       <ul class="nav navbar-nav">
         <li class="nav-item"><a href="#" class="nav-link" routerLink="/home" *ngIf="this.authService.isLoggedIn()">Home</a></li>
-        <li class="nav-item"><a class="nav-link" routerLink="profile" routerLinkActive="active" *ngIf="this.authService.isLoggedIn()">Films</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="films" routerLinkActive="active" *ngIf="this.authService.isLoggedIn()">Films</a></li>
         <li class="nav-item"><a class="nav-link" style="float:right" routerLink="tv-series" routerLinkActive="active" *ngIf="this.authService.isLoggedIn()">TV-Series</a></li>
       </ul>
 
