hide navbar in the player, set autoplay

--- a/mydrtv/src/app/film/film.component.html
+++ b/mydrtv/src/app/film/film.component.html
@@ -11,7 +11,7 @@
   <div class="row justify-content-md-center row-player">
     <div class="col-6">
       <div routerLink="player">
-        <img src="{{film.Poster}}" alt="Video player" class="img-fluid">
+        <img src="{{film.Poster}}" routerLink="/film/player/{{film._id}}" alt="Video player" class="img-fluid">
       </div>
     </div>
   </div>
