--- a/mydrtv/src/app/movie-carousel/movie-carousel.component.css
+++ b/mydrtv/src/app/movie-carousel/movie-carousel.component.css
@@ -3,19 +3,10 @@ div.gallery-wrapper {
 
 div.gallery {
   margin: 5px;
-  border: 1px solid #ccc;
-  float: left;
-  width: 180px; }
+  border: 1px solid #777;
+  float: left; }
 
 div.gallery:hover {
-  border: 1px solid #777; }
-
-div.gallery img {
-  width: 100%;
-  height: auto; }
-
-div.desc {
-  padding: 15px;
-  text-align: center; }
+  border: 1px solid #ccc; }
 
 /*# sourceMappingURL=movie-carousel.component.css.map */
