--- a/mydrtv/src/app/navbar/navbar.component.html
+++ b/mydrtv/src/app/navbar/navbar.component.html
@@ -6,7 +6,7 @@
     </button>
     <div class="collapse navbar-collapse" id="exCollapsingNavbar">
       <ul class="nav navbar-nav">
-        <li class="nav-item"><a href="#" class="nav-link" routerLink="/">Home</a></li>
+        <li class="nav-item"><a href="#" class="nav-link" routerLink="home">Home</a></li>
         <li class="nav-item"><a class="nav-link" routerLink="profile" routerLinkActive="active"
                                 *ngIf="this.authService.isLoggedIn()">Profile</a></li>
         <li class="nav-item"><a class="nav-link" style="float:right" routerLink="login" routerLinkActive="active"
