--- a/mydrtv/src/app/navbar/navbar.component.html
+++ b/mydrtv/src/app/navbar/navbar.component.html
@@ -20,7 +20,7 @@
               <i class="fa fa-search"></i>
             </div>
             <div class="search-input">
-              <input type="search" class="search-bar" placeholder="Search...">
+              <input type="search" class="search-bar" placeholder="Search movies">
             </div>
           </div>
         </li>
