added welcome page

--- a/mydrtv/src/app/welcome/welcome.component.html
+++ b/mydrtv/src/app/welcome/welcome.component.html
@@ -1,64 +1,26 @@
 <header>
     <div class="overlay"></div>
-    <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-        <source src="https://storage.googleapis.com/coverr-main/mp4/Mt_Baker.mp4" type="video/mp4">
+    <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" poster="assets/poster_next.jpg">
+        <source src="assets/welcomeVideo.mp4" type="video/mp4">
     </video>
     <div class="container h-100">
-        <div class="d-flex h-100 text-center align-items-center">
+        <div class="d-flex h-35 text-center align-items-center mt-5">
             <div class="w-100 text-white">
-                <h1 class="display-3">Danish cinema at its best</h1>
-                <p class="lead mb-0">Discover the cultural film heritage of Denmar</p>
+                <h1 class="display-3 main-headline">Danish cinema at its best</h1>
+                <p class="lead mb-0">Discover the cultural film heritage of Denmark</p>
             </div>
+        </div>
+        <div class="row w-100 justify-content-around mt-5">
+            <img src="assets/posters/1.jpg" alt="" class="poster" @fade>
+            <img src="assets/posters/2.jpg" alt="" class="poster" @fade>
+            <img src="assets/posters/3.jpg" alt="" class="poster" @fade>
+            <img src="assets/posters/4.jpg" alt="" class="poster" @fade>
+            <img src="assets/posters/5.jpg" alt="" class="poster" @fade>
+            <img src="assets/posters/6.jpg" alt="" class="poster" @fade>
+            <img src="assets/posters/7.jpg" alt="" class="poster" @fade>
+            <img src="assets/posters/8.jpg" alt="" class="poster" @fade>
+            <img src="assets/posters/9.jpg" alt="" class="poster" @fade>
+            <img src="assets/posters/10.jpg" alt="" class="poster" @fade>
         </div>
     </div>
 </header>
-<section class="my-5">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8 mx-auto">
-                <p>The HTML5 video element uses an mp4 video as a source. Change the source video to add in your own background! The header text is vertically centered using flex utilities that are build into Bootstrap 4.</p>
-                <p>The overlay color can be changed by changing the <code>background-color</code> of the <code>.overlay</code> class in the CSS.</p>
-                <p>Set the mobile fallback image in the CSS by changing the background image of the header element within the media query at the bottom of the CSS snippet.</p>
-                <p class="mb-0">
-                    Created by <a href="https://startbootstrap.com">Start Bootstrap</a>
-                </p>
-            </div>
-        </div>
-    </div>
-</section>
-<ng-parallax img="/assets/welcomePage/2.jpg" class="parallaxImageSection" [config]="{initialValue: -100, sped: 0.1}">
-    <section class="my-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8 mx-auro">
-                    <h2>Best movies</h2>
-                </div>
-            </div>
-        </div>
-    </section>
-</ng-parallax>
-<section class="my-5">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8 mx-auto">
-                <p>The HTML5 video element uses an mp4 video as a source. Change the source video to add in your own background! The header text is vertically centered using flex utilities that are build into Bootstrap 4.</p>
-                <p>The overlay color can be changed by changing the <code>background-color</code> of the <code>.overlay</code> class in the CSS.</p>
-                <p>Set the mobile fallback image in the CSS by changing the background image of the header element within the media query at the bottom of the CSS snippet.</p>
-                <p class="mb-0">
-                    Created by <a href="https://startbootstrap.com">Start Bootstrap</a>
-                </p>
-            </div>
-        </div>
-    </div>
-</section>
-<ng-parallax img="/assets/welcomePage/2.jpg" class="parallaxImageSection" [config]="{initialValue: -100, sped: 0.1}">
-    <section class="my-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8 mx-auro">
-                    <h2>Best movies</h2>
-                </div>
-            </div>
-        </div>
-    </section>
-</ng-parallax>
