--- a/mydrtv/src/app/welcome/welcome.component.scss
+++ b/mydrtv/src/app/welcome/welcome.component.scss
@@ -1,7 +1,6 @@
 header {
   position: relative;
-  background-color: black;
-  height: 75vh;
+  height: 93vh;
   min-height: 25rem;
   width: 100%;
   overflow: hidden;
@@ -37,17 +36,25 @@ header .overlay {
   opacity: 0.5;
   z-index: 1;
 }
+.main-headline{
+  font-family: 'Anton', sans-serif;
+}
 
 @media (pointer: coarse) and (hover: none) {
   header {
-    background: url('https://source.unsplash.com/XT5OInaElMw/1600x900') black no-repeat center center scroll;
+    background: url('http://localhost:4200/assets/poster.jpg') cover;
   }
   header video {
     display: none;
   }
 }
 
-.parallaxImageSection{
-  height: 60vh;
-  width: 100%;
+.poster-section{
+  margin-top: 15px;
+}
+.poster{
+  height: 35vh;
+}
+.poster:nth-child(even){
+  margin-top: 50px;
 }
