logout() when delete user

--- a/mydrtv/src/app/profile/profile.component.html
+++ b/mydrtv/src/app/profile/profile.component.html
@@ -59,7 +59,7 @@
       
       </form>
 
-      <div class="divDeleteUser">Do you wish to close down your account?  <a id="deleteButton" (click)="onDeleteUser()">Delete</a></div>
+      <div class="divDeleteUser">Do you wish to close down your account?  <a id="deleteButton" (click)="onDeleteUser()" routerLink="/" routerLinkActive="active">Delete</a></div>
     </div>
 
   </div>
