--- a/mydrtv/src/app/navbar/navbar.component.html
+++ b/mydrtv/src/app/navbar/navbar.component.html
@@ -43,12 +43,12 @@
               </div>
 
               <div class="form-group">
-                <button type="submit" id="loginBtn" class="btn btn-primary btn-block" (click)="Login()">Login</button>
+                <button type="submit" data-toggle="" id="loginBtn" class="btn btn-primary btn-block" (click)="Login()">Login</button>
               </div>
 
-              <div *ngIf="submitted && f.login.errors" class="invalid-feedback">
-                  <div *ngIf="f.login.errors">E-mail does not exist</div>
-                </div>
+              <div class="invalid" id="wrong">
+                  <div>Wrong e-mail or password</div>
+              </div>
             </li>
           </ul>
         </li>
