pipe worksss!!! :) almost

--- a/mydrtv/src/app/search/search.component.html
+++ b/mydrtv/src/app/search/search.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+    <div class="search-input">
+        <input [(ngModel)]="searchInput" type="search" class="search-bar" placeholder="Search movies">
+      </div>
   <h3>N number of finds </h3>
 <div class="row">
     <div *ngFor="let film of films | filmsSearch: searchInput" class="col-3">
