successful tests ran on search pipe and search component with no failure

--- a/mydrtv/src/styles.scss
+++ b/mydrtv/src/styles.scss
@@ -49,3 +49,6 @@ input:focus, select:focus, button:focus, button:active {
   box-shadow: none !important;
   border:1px solid $main!important;
 }
+.summary{
+  background-color: white;
+}
