--- a/mydrtv/src/app/signup/signup.component.html
+++ b/mydrtv/src/app/signup/signup.component.html
@@ -1,20 +1,20 @@
 <form [formGroup]="signupForm" (ngSubmit)="onSubmit()"> 
     <h2>Sign up</h2>
 
-      <input placeholder="Name" type="text" formControlName="name" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.name.errors }">
+      <input placeholder="Name" type="text" formControlName="name" class="form-control" id="txtNameSignup" [ngClass]="{ 'is-invalid': submitted && f.name.errors }">
         <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
           <div *ngIf="f.name.errors.required">Name is required</div>
         </div>
 
 
-        <input placeholder="E-mail" type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }">
+        <input placeholder="E-mail" type="text" formControlName="email" class="form-control" id="txtEmailSignup" [ngClass]="{ 'is-invalid': submitted && f.email.errors }">
         <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
           <div *ngIf="f.email.errors.required">E-mail is required</div>
           <div *ngIf="f.email.errors.email">E-mail must be a valid e-mail address</div>
       </div>
 
 
-        <input placeholder="Password" type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }">
+        <input placeholder="Password" type="password" formControlName="password" class="form-control" id="txtPasswordSignup" [ngClass]="{ 'is-invalid': submitted && f.password.errors }">
           <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
             <div *ngIf="f.password.errors.required">Password is required</div>
             <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
@@ -24,7 +24,7 @@
          <label>
             Gender:
           </label>
-            <select formControlName="gender" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.gender.errors }">
+            <select formControlName="gender" class="form-control" id="txtGenderSignup" [ngClass]="{ 'is-invalid': submitted && f.gender.errors }">
               <option id="choose" value="" disabled>Choose...</option>
               <option value="M">Male</option>
               <option value="F">Female</option>
@@ -35,7 +35,7 @@
               </div>
 
               <label class="checkbox">
-                  <input type="checkbox" formControlName="checkbox" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.checkbox.errors }">I agree to the Terms of Service and Privacy Policy.
+                  <input type="checkbox" formControlName="checkbox" class="form-control" id="txtCheckboxSignup" [ngClass]="{ 'is-invalid': submitted && f.checkbox.errors }">I agree to the Terms of Service and Privacy Policy.
 
                   <div *ngIf="submitted && f.checkbox.errors" class="invalid-feedback">
                       <div *ngIf="f.checkbox.errors.pattern">You cannot sign up if you do not agree</div>
@@ -43,7 +43,7 @@
                 </label>
 
     <div class="form-group">
-      <button [disabled]="loading" class="btn btn-primary">Sign up</button>
+      <button [disabled]="loading" id="btnSignup" class="btn btn-primary">Sign up</button>
     </div>
   
   </form>
